# rozetka_fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HISTORY.rst  README.md  README.rst  deploy.cmd  entrypoint.sh  export_requirements.cmd  pyproject.toml  requirements.txt  test_main.http
.github/: dependabot.yml
.github/workflows/: docker-image.yml
rozetka_fastapi/: __main__.py
script/: build_run.cmd  deploy.cmd
