[project]
name = "rozetka-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,!=3.13"
dependencies = [
    "aiohttp-retry>=2.9.0",
    "cashews[redis]>=7.3.2",
    "fastapi>=0.115.4",
    "global-logger>=0.4.2",
    "influxdb-client[async]>=1.47.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]
