[project]
name = "rozetka-fastapi"
version = "0"
description = "Rozetka.ua Python FastAPI"
requires-python = "==3.14.*"
dependencies = [
    "aiohttp-retry",
    "cashews[redis]",
    "fastapi",
    "global-logger",
    "influxdb-client[async]",
    "pydantic",
    "python-dotenv",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 120
